working bot but very slow

--- a/lydia_form_filer.ipynb
+++ b/lydia_form_filer.ipynb
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1065,6 +1065,240 @@
    "metadata": {},
    "source": [
     "Okkkkkkkkkkk we have it !!! "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Experiments on load options : "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from selenium import webdriver\n",
+    "from selenium.webdriver.common.keys import Keys #used to simulate some keyboard keys (Alt, Tab, etc.)\n",
+    "from selenium.webdriver.common.by import By #used to locate elements on website\n",
+    "import time\n",
+    "from selenium.webdriver.chrome.options import Options #We need this to prevent notifications and pop-ups\n",
+    "from selenium.common.exceptions import NoSuchElementException #to try and catch the error we need to import it !\n",
+    "from selenium.webdriver.common.desired_capabilities import DesiredCapabilities "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/f9/pyjz1fyn319c79776sblqzp00000gn/T/ipykernel_31832/2011300824.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(executable_path=\"~/Desktop/proj/chromedriver\") #creates a chrome web driver instance\n"
+     ]
+    }
+   ],
+   "source": [
+    "driver = webdriver.Chrome(executable_path=\"~/Desktop/proj/chromedriver\") #creates a chrome web driver instance "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.get(\"https://collecte.io/simulation-de-sat-2231239/fr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "caps = DesiredCapabilities().CHROME\n",
+    "caps[\"pageLoadStrategy\"] = \"none\"   # Just wait until page is interactive"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/f9/pyjz1fyn319c79776sblqzp00000gn/T/ipykernel_31832/3018020159.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver2 = webdriver.Chrome(desired_capabilities=caps, executable_path='/Users/hugocaetano/Desktop/lydia_collect_automator/chromedriver')\n"
+     ]
+    }
+   ],
+   "source": [
+    "driver2 = webdriver.Chrome(desired_capabilities=caps, executable_path='/Users/hugocaetano/Desktop/lydia_collect_automator/chromedriver')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver2.get(\"https://collecte.io/simulation-de-sat-2231239/fr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '//div/label'\n",
+    "elements = driver.find_elements(By.XPATH, path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = '//div/label'\n",
+    "elements = driver2.find_elements(By.XPATH, path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver.close(); driver2.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/f9/pyjz1fyn319c79776sblqzp00000gn/T/ipykernel_31832/1555669487.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(executable_path=\"~/Desktop/proj/chromedriver\") #creates a chrome web driver instance\n"
+     ]
+    }
+   ],
+   "source": [
+    "driver = webdriver.Chrome(executable_path=\"~/Desktop/proj/chromedriver\") #creates a chrome web driver instance \n",
+    "driver.get(\"https://collecte.io/simulation-de-sat-2231239/fr\")\n",
+    "path = '//div/label'\n",
+    "elements = driver.find_elements(By.XPATH, path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/f9/pyjz1fyn319c79776sblqzp00000gn/T/ipykernel_31832/2516863239.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver2 = webdriver.Chrome(desired_capabilities=caps, executable_path='/Users/hugocaetano/Desktop/lydia_collect_automator/chromedriver')\n"
+     ]
+    }
+   ],
+   "source": [
+    "driver2 = webdriver.Chrome(desired_capabilities=caps, executable_path='/Users/hugocaetano/Desktop/lydia_collect_automator/chromedriver')\n",
+    "driver2.get(\"https://collecte.io/simulation-de-sat-2231239/fr\")\n",
+    "path = '//div/label'\n",
+    "elements = driver2.find_elements(By.XPATH, path)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "from just this step, the none option actually makes sense. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functions as fun \n",
+    "dic = { #Here you have to give your personal pieces of information that could be required in the form\n",
+    "    'Nom' : 'Caetano',\n",
+    "    'Prénom' : 'Hugo',\n",
+    "    'Numéro de téléphone' : '0619372524',\n",
+    "    'Adresse email' : 'hugocaetano78800@gmail.com',\n",
+    "    'Asso' : 'BDX',\n",
+    "    'Numéro étudiant' : '20213566',\n",
+    "    'Promo' : '3A'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/f9/pyjz1fyn319c79776sblqzp00000gn/T/ipykernel_31832/2811574236.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver = webdriver.Chrome(executable_path=\"~/Desktop/proj/chromedriver\") #creates a chrome web driver instance\n"
+     ]
+    }
+   ],
+   "source": [
+    "driver = webdriver.Chrome(executable_path=\"~/Desktop/proj/chromedriver\") #creates a chrome web driver instance \n",
+    "driver.get(\"https://collecte.io/simulation-de-sat-2231239/fr\")\n",
+    "fun.true_completer(driver = driver, dic = dic)\n",
+    "driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/f9/pyjz1fyn319c79776sblqzp00000gn/T/ipykernel_31832/198693512.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "  driver2 = webdriver.Chrome(desired_capabilities=caps, executable_path='/Users/hugocaetano/Desktop/lydia_collect_automator/chromedriver')\n"
+     ]
+    }
+   ],
+   "source": [
+    "driver2 = webdriver.Chrome(desired_capabilities=caps, executable_path='/Users/hugocaetano/Desktop/lydia_collect_automator/chromedriver')\n",
+    "driver2.get(\"https://collecte.io/simulation-de-sat-2231239/fr\")\n",
+    "fun.true_completer(driver = driver2, dic = dic)\n",
+    "driver2.close()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok, so my first solution was indeed working. "
    ]
   }
  ],
