--- a/lydia_form_filer.ipynb
+++ b/lydia_form_filer.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/f9/pyjz1fyn319c79776sblqzp00000gn/T/ipykernel_8414/3130617002.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
+      "/var/folders/f9/pyjz1fyn319c79776sblqzp00000gn/T/ipykernel_1431/3130617002.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
       "  driver = webdriver.Chrome(executable_path=\"~/Desktop/proj/chromedriver\") #creates a chrome web driver instance\n"
      ]
     }
@@ -198,18 +198,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/f9/pyjz1fyn319c79776sblqzp00000gn/T/ipykernel_8414/768396232.py:1: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome(executable_path=\"~/Desktop/proj/chromedriver\") #creates a chrome web driver instance\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver = webdriver.Chrome(executable_path=\"~/Desktop/proj/chromedriver\") #creates a chrome web driver instance \n",
     "driver.get(\"https://collecte.io/paintball-inter-assos-2091521/fr\") #navigate to this URL, wait until it is loaded"
@@ -287,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1318,7 +1309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12 (main, Apr  5 2022, 01:53:17) \n[Clang 12.0.0 ]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
